// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders component when checked 1`] = `
<DocumentFragment>
  <span
    aria-checked="true"
    class="switch switch--checked a-class-name"
    id="id"
    role="checkbox"
    tabindex="0"
  >
    <span
      class="switch--thumb"
    >
      <span
        aria-hidden="true"
        class="tw-icon tw-icon-check-circle "
        role="presentation"
      >
        <svg
          fill="currentColor"
          height="24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zM7.707 11.293l-1.414 1.414 4.207 4.207 7.707-7.707-1.414-1.414-6.293 6.293-2.793-2.793z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
    <input
      checked=""
      readonly=""
      type="checkbox"
    />
  </span>
</DocumentFragment>
`;

exports[`Switch renders component when unchecked 1`] = `
<DocumentFragment>
  <span
    aria-checked="false"
    class="switch switch--unchecked a-class-name"
    id="id"
    role="checkbox"
    tabindex="0"
  >
    <span
      class="switch--thumb"
    >
      <span
        aria-hidden="true"
        class="tw-icon tw-icon-cross-circle "
        role="presentation"
      >
        <svg
          fill="currentColor"
          height="24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm3.293-5.293L12 13.414l-3.293 3.293-1.414-1.414L10.586 12 7.293 8.707l1.414-1.414L12 10.586l3.293-3.293 1.414 1.414L13.414 12l3.293 3.293-1.414 1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </span>
    <input
      readonly=""
      type="checkbox"
    />
  </span>
</DocumentFragment>
`;
